[project]
name = "nekro-plugin-agnes"
version = "1.1.0"
description = "Agnes AI 文本、图片、视频生成插件"
authors = [{ name = "greenhandzdl", email = "greenhandzdl@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = ["nekro-agent>=2.0.0", "httpx"]

[project.urls]
Repository = "https://github.com/Yacey/agnes-ai-generation-skill"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]

[tool.black]
line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
